--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ h1 {
 	color: #4a1900;
 }
 
-li {
+ul {
 	list-style-type: none;
 }
 
@@ -25,4 +25,8 @@ nav {
 body {
 	border-width: thin;
 	border-color:
+}
+
+a:hover {
+	background-color: #795437;
 }
