--- a/css/main.css
+++ b/css/main.css
@@ -1,64 +1,64 @@
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Dosis", sans-serif;
   font-weight: bold;
   background-color: white;
-	text-align: center;
+  text-align: center;
 }
 
 *, *::before, *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 h1 {
-	background-color: #efeee9;
-	display: block;
-	color: #4a1900;
-	padding: 0;
-	margin: 0;
-	line-height: 2;
+  background-color: #efeee9;
+  display: block;
+  color: #4a1900;
+  padding: 0;
+  margin: 0;
+  line-height: 2;
 }
 
 ul {
-	background-color: #9a816d;
-	margin: 0px;
+  background-color: #9a816d;
+  margin: 0;
   padding: 0;
-	border: 5px 0px 5px #795437;
-	list-style-type: none;
+  border: 0;
+  list-style-type: none;
 }
 
 nav {
-	border: 0;
-	margin: 0;
-	padding: 1px 0px 1px 0px;
+  border: 0;
+  margin: 0;
+  padding: 1px 0 1px 0;
   color: #efeee9;
-	background-color: #795437;
+  background-color: #795437;
 }
 
 body {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 a:hover {
-	display: block;
-	padding: 0;
-	margin: 0;
-	background-color: #795437;
-	width: 100%;
+  display: block;
+  padding: 0;
+  margin: 0;
+  background-color: #795437;
+  width: 100%;
 }
 
 a {
-	text-decoration: none;
-	color: #efeee9;
-	width: 100%;
+  text-decoration: none;
+  color: #efeee9;
+  width: 100%;
 }
 
 li {
-	display: block;
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	border: 1.75px solid #795437;
-	line-height: 2.5;
+  display: block;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  border: 1.75px solid #795437;
+  line-height: 2.5;
 }
